--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -104,7 +104,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          upload_url: ${{ steps.upload-url.outputs.url }}
           asset_path: build/myapp-${{ matrix.os }}-${{ matrix.arch }}${{ matrix.ext }}
           asset_name: myapp-${{ matrix.os }}-${{ matrix.arch }}${{ matrix.ext }}
           asset_content_type: application/octet-stream
